--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,10 @@
     <dimen name="display_corner_radius">16dp</dimen>
     <dimen name="keypad_row_spacing">0dp</dimen>
     <dimen name="native_media_max_height">160dp</dimen>
+
+    <!-- Shared content card specs -->
+    <dimen name="card_corner_radius">12dp</dimen>
+    <dimen name="card_elevation">4dp</dimen>
+    <dimen name="card_margin">8dp</dimen>
+    <dimen name="card_content_padding">12dp</dimen>
 </resources>
