--- a/app/src/main/res/layout/table.xml
+++ b/app/src/main/res/layout/table.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -16,6 +17,7 @@
             android:layout_height="wrap_content">
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/content_card"
                 style="@style/ContentCard"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -35,14 +37,22 @@
                         android:maxLines="50" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+
+            <!-- Adaptive Native Ad Card placed in the natural scroll flow -->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/ad_card"
+                style="@style/ContentCard"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:contentPadding="0dp">
+
+                <com.infovsn.homework.MaxHeightFrameLayout
+                    android:id="@+id/ad_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
     </ScrollView>
 
-    <!-- Flexible bottom ad container, overlays at bottom without reserving space -->
-    <com.infovsn.homework.MaxHeightFrameLayout
-        android:id="@+id/ad_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true" />
+    <!-- Removed bottom overlay ad container to prevent overlap with content -->
 </RelativeLayout>
