--- a/app/src/main/res/layout/activity_prime_numbers_result.xml
+++ b/app/src/main/res/layout/activity_prime_numbers_result.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,6 +21,7 @@
             android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/content_card"
                 style="@style/ContentCard"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -47,14 +49,22 @@
                         android:textColor="#000000"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+
+            <!-- Adaptive Native Ad Card placed in the natural scroll flow -->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/ad_card"
+                style="@style/ContentCard"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:contentPadding="0dp">
+
+                <com.infovsn.homework.MaxHeightFrameLayout
+                    android:id="@+id/ad_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
     </ScrollView>
 
-    <!-- Flexible ad container anchored to the bottom; overlays without pushing content -->
-    <com.infovsn.homework.MaxHeightFrameLayout
-        android:id="@+id/ad_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+    <!-- Removed bottom overlay ad container to prevent overlap with content -->
 </RelativeLayout>
